# Scalar-RL-hackathon

./: .gitignore  Dockerfile  README.md  app.py  baseline.py  inference.py  pyproject.toml  requirements.txt  server.py
env/: environment.py
server/: app.py
